got the content on the index file

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,7 +8,72 @@
 
     <link rel="stylesheet" href="styles.css">
 </head>
+
 <body>
+
+    <div class="navbar-container">
+        <div>Header Logo</div>
+        <div></div>
+        <div>Header link one</div>
+        <div>Header link two</div>
+        <div>Header link three</div>
+    </div>
+
+    <div>
+        <div>
+            <h1>This website is awesome</h1>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Error quis est culpa. Excepturi dicta natus
+                magnam beatae reiciendis ullam magni quis neque animi labore ducimus sequi rerum nostrum, praesentium
+                tempore!</p>
+            <button>Sign up</button>
+        </div>
+        <div>
+            <img src="">
+        </div>
+    </div>
+
+    <div>
+        <h1>Some random information</h1>
+        <div>
+            <div>
+                <img>
+                <p></p>
+            </div>
+            <div>
+                <img>
+                <p></p>
+            </div>
+            <div>
+                <img>
+                <p></p>
+            </div>
+            <div>
+                <img>
+                <p></p>
+            </div>
+        </div>
+    </div>
+
+    <div>
+        <p>This is an inspiring quote</p>
+        <p>-Thor, God of Thunder</p>
+    </div>
     
+
+    <div>
+        <div>
+            <h4>Call to action! It's time!</h4>
+            <p>Sign up for our product</p>
+        </div>
+        <div>
+            <button>Sign up</button>
+        </div>
+    </div>
+
+    <footer>
+        <p>Copyright © The Odin Project 2021</p>
+    </footer>
+
 </body>
+
 </html>
