finsihed adding header, random info, and quote

--- a/index.html
+++ b/index.html
@@ -10,55 +10,58 @@
 </head>
 
 <body>
-
-    <div class="navbar-container">
-        <div>Header Logo</div>
-        <div></div>
-        <div>Header link one</div>
-        <div>Header link two</div>
-        <div>Header link three</div>
-    </div>
-
-    <div>
-        <div>
-            <h1>This website is awesome</h1>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Error quis est culpa. Excepturi dicta natus
-                magnam beatae reiciendis ullam magni quis neque animi labore ducimus sequi rerum nostrum, praesentium
-                tempore!</p>
-            <button>Sign up</button>
+    <div class="header">
+        <div class="navbar-container">
+            <div class="header-item logo"><strong>Header Logo</strong></div>
+            <div class="header-item spacer">Header link one</div>
+            <div class="header-item">Header link two</div>
+            <div class="header-item">Header link three</div>
         </div>
-        <div>
-            <img src="">
-        </div>
-    </div>
 
-    <div>
-        <h1>Some random information</h1>
-        <div>
-            <div>
-                <img>
-                <p></p>
+        <div class="hero-banner">
+            <div class="hero-banner-copy-content">
+                <h1>This website is awesome</h1>
+                <p>This website has some subtext that goes here under the main title. It's a smaller font and the color
+                    is a lower contrast.</p>
+                <button>Sign up</button>
             </div>
-            <div>
-                <img>
-                <p></p>
-            </div>
-            <div>
-                <img>
-                <p></p>
-            </div>
-            <div>
-                <img>
-                <p></p>
+            <div class="hero-banner-image">
+                <img
+                    src="https://assets.newatlas.com/dims4/default/39dce54/2147483647/strip/true/crop/5000x3502+0+0/resize/1371x960!/quality/90/?url=http%3A%2F%2Fnewatlas-brightspot.s3.amazonaws.com%2F3e%2Fe8%2F80356654422882922496192fc567%2Fveil-nebula.jpeg">
             </div>
         </div>
     </div>
 
-    <div>
-        <p>This is an inspiring quote</p>
-        <p>-Thor, God of Thunder</p>
+
+    <div class="random-info-container">
+        <h1>Some random information.</h1>
+        <div class="random-info-container inner">
+            <div class="img-copy-container">
+                <img>
+                <p>This is some subtext under an illustration or image</p>
+            </div>
+            <div class="img-copy-container">
+                <img>
+                <p>This is some subtext under an illustration or image</p>
+            </div>
+            <div class="img-copy-container">
+                <img>
+                <p>This is some subtext under an illustration or image</p>
+            </div>
+            <div class="img-copy-container">
+                <img>
+                <p>This is some subtext under an illustration or image</p>
+            </div>
+        </div>
     </div>
-    
+
+    <div class="quote-container">
+        <p id="main-quote">Lorem ipsum dolor sit amet consectetur adipisicing elit. Dicta officia doloribus molestias
+            labore laudantium repudiandae, numquam culpa tempora commodi perspiciatis qui debitis distinctio a deleniti
+            animi. Dolores exercitationem quas explicabo.</p>
+        <p id="quote-author">-Thor, God of Thunder</p>
+    </div>
+
 
     <div>
         <div>
