finalized project and credited image source on README

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             </div>
             <div class="hero-banner-image">
                 <img
-                    src="https://assets.newatlas.com/dims4/default/39dce54/2147483647/strip/true/crop/5000x3502+0+0/resize/1371x960!/quality/90/?url=http%3A%2F%2Fnewatlas-brightspot.s3.amazonaws.com%2F3e%2Fe8%2F80356654422882922496192fc567%2Fveil-nebula.jpeg">
+                    src="./quino-al-JFeOy62yjXk-unsplash.jpg">
             </div>
         </div>
     </div>
@@ -37,19 +37,19 @@
         <h1>Some random information.</h1>
         <div class="random-info-container inner">
             <div class="img-copy-container">
-                <img>
+                <img src="./quino-al-JFeOy62yjXk-unsplash.jpg">
                 <p>This is some subtext under an illustration or image</p>
             </div>
             <div class="img-copy-container">
-                <img>
+                <img src="./quino-al-JFeOy62yjXk-unsplash.jpg">
                 <p>This is some subtext under an illustration or image</p>
             </div>
             <div class="img-copy-container">
-                <img>
+                <img src="./quino-al-JFeOy62yjXk-unsplash.jpg">
                 <p>This is some subtext under an illustration or image</p>
             </div>
             <div class="img-copy-container">
-                <img>
+                <img src="./quino-al-JFeOy62yjXk-unsplash.jpg">
                 <p>This is some subtext under an illustration or image</p>
             </div>
         </div>
@@ -63,17 +63,20 @@
     </div>
 
 
-    <div>
-        <div>
-            <h4>Call to action! It's time!</h4>
-            <p>Sign up for our product</p>
-        </div>
-        <div>
-            <button>Sign up</button>
-        </div>
+    <div class="sign-up-banner-container">
+        <div class="inner-sign-up-container">
+            <div class="sign-up-content">
+                <h3>Call to action! It's time!</h3>
+                <p>Sign up for our product by clicking that button right over there!</p>
+            </div>
+            <div class="sign-up-button">
+                <a href="https://google.com"><p>Sign up</p></a>
+            </div>
+        </div>        
     </div>
 
-    <footer>
+
+    <footer class="footer">
         <p>Copyright © The Odin Project 2021</p>
     </footer>
 
