--- a/index.html
+++ b/index.html
@@ -21,13 +21,11 @@
         <div class="hero-banner">
             <div class="hero-banner-copy-content">
                 <h1>This website is awesome</h1>
-                <p>This website has some subtext that goes here under the main title. It's a smaller font and the color
-                    is a lower contrast.</p>
+                <p>This website has some subtext that goes here under the main title. It's a smaller font and the color is a lower contrast.</p>
                 <button>Sign up</button>
             </div>
             <div class="hero-banner-image">
-                <img
-                    src="./quino-al-JFeOy62yjXk-unsplash.jpg">
+                <img src="./quino-al-JFeOy62yjXk-unsplash.jpg">
             </div>
         </div>
     </div>
@@ -56,9 +54,7 @@
     </div>
 
     <div class="quote-container">
-        <p id="main-quote">Lorem ipsum dolor sit amet consectetur adipisicing elit. Dicta officia doloribus molestias
-            labore laudantium repudiandae, numquam culpa tempora commodi perspiciatis qui debitis distinctio a deleniti
-            animi. Dolores exercitationem quas explicabo.</p>
+        <p id="main-quote">Lorem ipsum dolor sit amet consectetur adipisicing elit. Dicta officia doloribus molestias labore laudantium repudiandae, numquam culpa tempora commodi perspiciatis qui debitis distinctio a deleniti animi. Dolores exercitationem quas explicabo.</p>
         <p id="quote-author">-Thor, God of Thunder</p>
     </div>
 
@@ -70,9 +66,11 @@
                 <p>Sign up for our product by clicking that button right over there!</p>
             </div>
             <div class="sign-up-button">
-                <a href="https://google.com"><p>Sign up</p></a>
+                <a href="https://google.com">
+                    <p>Sign up</p>
+                </a>
             </div>
-        </div>        
+        </div>
     </div>
 
 
